<resources>
    <string name="app_name">LetMCook</string>

    <!-- Content Descriptions -->
    <string name="desc_back">Back</string>
    <string name="desc_profile">Profile</string>
    <string name="desc_delete_recipe">Delete Recipe</string>
    <string name="desc_recipe_image">Recipe Image</string>
    <string name="desc_remove">Remove</string>
    <string name="desc_more">More</string>
    <string name="desc_add_ingredient">Add Ingredient</string>
    <string name="desc_add_recipe">Add Recipe</string>
    <string name="desc_water_icon">Water intake icon</string>
    <string name="desc_arrow">Arrow</string>
    <string name="desc_macro_icon">Macro icon</string>

    <!-- Common -->
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="move">Move</string>
    <string name="app_name_styled">LetMCook</string>
    <string name="other">Other</string>

    <!-- Dashboard -->
    <string name="title_let_m_cook">Let M Cook</string>
    <string name="statistics">Statistics</string>
    <string name="calories">Calories</string>
    <string name="protein">Protein</string>
    <string name="fats">Fats</string>
    <string name="carbs">Carbs</string>
    <string name="drinking_water">Drinking water</string>
    <string name="suggestions_for_you">Suggestions For You</string>
    <string name="fitness_planner">Fitness Planner</string>
    <string name="calories_format">%1$d / %2$d kcal</string>
    <string name="calories_unit_format">%1$d kcal</string>
    <string name="macro_format_g">%1$d / %2$dg</string>
    <string name="water_format">%1$dml / %2$d ml</string>
    <string name="percent_format">%1$d%%</string>
    <string name="duration_min_format">%1$d min</string>

    <!-- Auth -->
    <string name="join_us">Join Us</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_account_sign_in">Already have an account? Sign In</string>
    <string name="tagline">Your smart culinary assistant</string>
    <string name="sign_in">Sign In</string>
    <string name="new_here_create_account">New here? Create an account</string>

    <!-- Recipe -->
    <string name="new_recipe">New Recipe</string>
    <string name="add_photo">Add Photo</string>
    <string name="title">Title</string>
    <string name="instructions_hint">Instructions (numbered list)</string>
    <string name="add_ingredients">Add Ingredients</string>
    <string name="ingredient">Ingredient</string>
    <string name="qty">Qty</string>
    <string name="create_recipe">Create Recipe</string>
    <string name="ingredients">Ingredients</string>
    <string name="preparation">Preparation</string>
    <string name="eat">Eat</string>
    <string name="add_to_grocery_list">Add to Grocery List</string>
    <string name="explore_recipes">Explore Recipes</string>
    <string name="search_recipes_hint">Search recipes&#8230;</string>
    <string name="macros_format">%1$d kcal | P: %2$dg | C: %3$dg | F: %4$dg</string>
    <string name="macro_summary_format">P: %1$dg | C: %2$dg | F: %3$dg</string>

    <!-- Pantry / Grocery -->
    <string name="my_pantry">My Pantry</string>
    <string name="grocery_list">Grocery List</string>
    <string name="move_all">Move All</string>
    <string name="add_to_pantry">Add to Pantry</string>
    <string name="select_ingredient">Select Ingredient</string>
    <string name="quantity">Quantity</string>
    <string name="move_all_to_pantry">Move All to Pantry</string>
    <string name="exp_format">Exp: %1$s</string>
    <string name="exp_date_format">Exp: %1$s</string>
    <string name="qty_format">%1$s %2$s</string>
    <string name="edit_amount">Edit Amount</string>
    <string name="move_amount_to_pantry">Move Amount to Pantry</string>
    <string name="move_all_to_pantry_menu">Move All to Pantry</string>
    <string name="delete_item">Delete Item</string>
    <string name="unknown">Unknown</string>

    <!-- Goals -->
    <string name="my_goals">My Goals</string>
    <string name="age">Age</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="height_cm">Height (cm)</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="activity_level">Activity Level</string>
    <string name="your_goal">Your Goal</string>
    <string name="lose_weight">Lose Weight</string>
    <string name="maintain_weight">Maintain Weight</string>
    <string name="gain_muscle">Gain Muscle</string>
    <string name="save_goals">Save Goals</string>

    <!-- Profile -->
    <string name="large_typography">Large Typography</string>
    <string name="keep_screen_on">Keep Screen On</string>
    <string name="update_nutrition_goals">Update Nutrition Goals</string>
    <string name="sign_out">Sign Out</string>

    <!-- Dialogs -->
    <string name="update_quantity">Update Quantity</string>
    <string name="update">Update</string>
    <string name="remove_item">Remove Item</string>
    <string name="remove_item_confirm">Are you sure you want to remove this item from your pantry?</string>
    <string name="remove">Remove</string>
    <string name="delete_recipe_title">Delete Recipe</string>
    <string name="delete_recipe_confirm">Are you sure you want to delete \'%1$s\'?</string>
    <string name="insufficient_ingredients">Insufficient Ingredients</string>
    <string name="missing_ingredients_msg">You are missing some ingredients: %1$s.\n\nWould you like to automatically add them to your pantry and log this meal?</string>
    <string name="add_and_log">Add &amp; Log</string>
    <string name="moved_to_pantry">Moved to Pantry</string>
    <string name="all_items_moved_to_pantry">All items moved to pantry</string>
    <string name="item_removed">Item removed</string>
    <string name="all">All</string>
    <string name="enter_amount_transfer">Enter the amount to transfer:</string>
    <string name="move_all_confirm">Are you sure you want to move all items in this list to your pantry?</string>
    <string name="delete_item_title">Delete Item</string>
    <string name="delete_item_confirm">Are you sure you want to remove this from your grocery list?</string>

</resources>
